--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-# Compiled class file
-*.class
+# dependencies
+/node_modules
+.pnp
+.pnp.js
 
-# Log file
-*.log
+# Vite build output
+/dist
 
-# BlueJ files
-*.ctxt
+# testing
+/coverage
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# production
+/build
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# misc
+.DS_Store
+Thumbs.db
+ehthumbs.db
+*.swp
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+vite-error.log*
+
+# IDE configs
+.vscode/
